PUT must encrypt or fail; drop UUID + NodeFeature
Removes the plaintext fallback path. If EncryptionService is unbound
at PUT time, the request fails with 503 Service Unavailable instead
of silently storing plaintext. logEncryptionSkippedOnce, the
AtomicBoolean, the FeatureService dependency, and the cluster-wide
NodeFeature gate all go with it — every PUT after this PR encrypts,
or no PUT happens at all.

Also drops the data_source_uuid field. It was pre-positioning for a
per-data-source KDF that the security team owns; no consumer exists
in this PR. Re-add when a real one does.

GET surfacing of encryption_state is dropped. With encryption now
mandatory, the field carries no information — every value is encrypted
by construction and there is no plaintext_legacy state to discriminate.

Test ITs gain a TestEncryptionServicePlugin that binds an identity
EncryptionService stub, since the real security plugin only binds it
when the PEK feature flag is on.